# Deep-Drive-APEX-sim

./: .gitignore  README.md  run_basic_track.sh
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/rc_sim_description/share/rc_sim_description/launch/: spawn_rc_car.launch.py
install/rc_sim_description/share/rc_sim_description/urdf/: rc_car.urdf.xacro
install/rc_sim_description/share/rc_sim_description/worlds/: basic_track.world
log/: latest_build
src/rc_sim_description/: CMakeLists.txt  package.xml
src/rc_sim_description/launch/: spawn_rc_car.launch.py
src/rc_sim_description/scripts/: rear_wheel_speed_bridge.py  rear_wheel_speed_publisher.py
src/rc_sim_description/scripts/algorithms/: control_direction.py  voiture_algorithm.py
src/rc_sim_description/scripts/control_system/: voiture_control_node.py
src/rc_sim_description/scripts/voiture_system/: rear_wheel_speed_bridge.py
src/rc_sim_description/urdf/: rc_car.urdf.xacro
src/rc_sim_description/worlds/: basic_track.world
src/voiture_system/: package.xml  setup.py
src/voiture_system/launch/: bringup_sim.launch.py
src/voiture_system/urdf/: ros2_control.xacro
