<?xml version="1.0"?>
<package format="3">
  <name>voiture_system</name>
  <version>0.0.1</version>
  <description>High-level controller and simulation bridge for RC car.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rc_sim_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
